--- a/src/main/resources/template.yml
+++ b/src/main/resources/template.yml
@@ -36,10 +36,14 @@ spring:
               args:
                 name: fallbackcmd
                 fallbackUri: forward:/fallback
-    #            - name: Retry
-    #              args:
-    #                retries: 3 # 重试3ci
-    #                series: SERVER_ERROR # 500 开头
+        #            - name: Retry
+        #              args:
+        #                retries: 3 # 重试3ci
+        #                series: SERVER_ERROR # 500 开头
+        - id: uaa
+          uri: lb://uaa
+          predicates:
+            - Path= /uaa/**
     nacos:
       discovery:
         server-addr: 172.16.8.5:8848
@@ -61,6 +65,16 @@ gateway:
       - /cata/
 
   auth:
-    enable: true
+    enable: false
     ignore-url:
       - /a/**
+feign:
+  hystrix:
+    enabled: true
+  compression:
+    request:
+      enabled: true #默认不开启
+      mime-types: text/html,application/xml,application/json # 设置压缩的数据类型，此处也是默认值
+      min-request-size: 2048 # 设置触发压缩的大小下限，此处也是默认值
+    response:
+      enabled: true
